<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".article_detail">

    <TextView
        android:id="@+id/article_date"
        android:layout_width="72dp"
        android:layout_height="44dp"
        android:layout_marginTop="76dp"
        android:layout_marginEnd="4dp"
        android:gravity="center"
        android:text="@string/article_date"
        android:textSize="10sp"
        app:layout_constraintBottom_toTopOf="@+id/article_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/article_title"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/article_title"
        android:layout_width="254dp"
        android:layout_height="60dp"
        android:gravity="center|center"
        android:text="@string/article_title"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.093"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/article_content"
        android:layout_width="380dp"
        android:layout_height="386dp"
        android:layout_marginBottom="164dp"
        android:text="@string/article_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.555"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/article_title"
        app:layout_constraintVertical_bias="0.661" />

    <EditText
        android:id="@+id/article_textbox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="104dp"
        android:hint="@string/speak_placeholder"
        android:importantForAutofill="no"
        android:inputType="text"
        android:minHeight="48dp"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/article_content"
        app:layout_constraintVertical_bias="1.0"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <ImageView
        android:id="@+id/article_mic_btn"
        android:layout_width="72dp"
        android:layout_height="42dp"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="16dp"
        android:backgroundTint="#F9F8FA"
        android:contentDescription="@string/mic_name"
        android:paddingEnd="10dp"
        android:src="@drawable/ic_mic_black_off"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.525"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/article_textbox"
        app:layout_constraintVertical_bias="0.695" />

    <Button
        android:id="@+id/last_page_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/last_page_btn_name"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/article_mic_btn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/article_textbox"
        android:onClick="onLastButtonClick"
        />

    <Button
        android:id="@+id/next_page_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/next_page_btn_name"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.348"
        app:layout_constraintStart_toEndOf="@+id/article_mic_btn"
        app:layout_constraintTop_toBottomOf="@+id/article_textbox"
        app:layout_constraintVertical_bias="0.517"
        android:onClick="onNextButtonClick"
        />
</androidx.constraintlayout.widget.ConstraintLayout>